--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,7 +121,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [windows-latest, ubuntu-latest]
+        os: [ macos-latest, windows-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     name: Execute on ${{ matrix.os }} runner
     steps:
